--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,49 @@
 version: '2'
 services:
+    redis:
+        image: "redis"
+        volumes:
+          - ./redis/data:/data
+
     driver:
         build: ./my_node_openzwave
-        ports:
-          - "8000:8000"
+        links:
+          - redis:redis
         volumes:
           - ./my_node_openzwave/config.json:/etc/config.json
           - ./my_node_openzwave/log:/root/my_node_openzwave/log
-        devices:
-          - /dev/ttyUSB0:/dev/ttyUSB0 
+        #devices:
+          #- /dev/ttyUSB0:/dev/ttyUSB0
+        environment:
+          - REDIS_HOST=redis
+        depends_on:
+          - redis
 
-    redis:
-        image: "redis"
-        expose:
-          - 6379
+    webapp:
+        build: ./verlichting-webapp
+        links:
+          - redis:redis
+          - driver:driver
+        environment:
+          - UPSTREAM_SERVER_HOST=driver
+          - UPSTREAM_SERVER_PORT=3000
+          - RACK_ENV=production
+          - REDIS_URL=redis://redis:6379/
+        volumes:
+          - ./verlichting-webapp/log:/root/verlichting-webapp/log
+        depends_on:
+          - driver
+    nginx-verlichting:
+        image: nginx:1.13.9
+        ports:
+          - "8080:80"
+        links:
+          - webapp:webapp
+        volumes:
+          - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+        volumes_from:
+          - ui
+    ui:
+      build: ./ui
+      volumes:
+        - /var/verlichting-webapp-elm/out
