--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,7 +14,7 @@ server {
     }
 
     location / {
-        root   /var/verlichting-webapp-elm/out;
+        root   /var/www/verlichting;
         index  index.html index.htm;
     }
 
