Move 'command' override to the docker-compose production override.
I can't get setting vars or args working, so resorted to moving
the whole command to the docker-compose-prod.yml file.

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,10 +1,10 @@
 version: '2'
+
 services:
     driver:
         devices:
           - /dev/ttyUSB0:/dev/ttyUSB0
-        environment:
-          - LIVE="--live"
+        command: node main.js --live --config /etc/config.json
     webapp:
         environment:
           - RACK_ENV=production
