--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
           - RACK_ENV=development
           - REDIS_URL=redis://redis:6379/
         volumes:
-          - ../webapp/.env:/root/verlichting-webapp/.env
+          - ../webapp/.env:/root/verlichting-webapp/.env:ro
         depends_on:
           - driver
     nginx:
