--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -15,5 +15,6 @@ services:
         volumes:
           - ../nginx/conf.d:/etc/nginx/conf.d:ro
           - /var/docker/openzwave/www:/var/www/verlichting-static:ro
+          - /var/docker/energie/www:/var/www/energie-static:ro
           - /var/www/challenges:/var/www/challenges:ro
           - ../nginx/certs:/certs:ro
