Also restart Redis automatically :S

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -1,6 +1,8 @@
 version: '2'
 
 services:
+    redis:
+        restart: unless-stopped
     driver:
         devices:
           - /dev/ttyUSB0:/dev/ttyUSB0
