--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
         image: "redis"
         volumes:
           - ./redis/data:/data
+        ports:
+          - "127.0.0.1:6379:6379"
 
     driver:
         build: ./my_node_openzwave
