--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -18,3 +18,6 @@ services:
           - RACK_ENV=development
         ports:
           - "8001:3000"
+    freshrss:
+        ports:
+          - "80:80"
