--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -38,6 +38,8 @@ services:
     tt-rss-db:
         env_file:
           - /var/docker/tt-rss/.env
+        volumes:
+          - /var/docker/tt-rss/data:/var/lib/postgresql/data
         restart: unless-stopped
     tt-rss-updater:
         restart: unless-stopped
