--- a/verlichting/my_node_openzwave/Dockerfile
+++ b/verlichting/my_node_openzwave/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:9.8.0
+FROM node:9.11.1-stretch
 
 ENV OPENZWAVE_VERSION=510a37df958d7b7108781e7a16bfe52e5831514d
 
@@ -10,7 +10,8 @@ RUN apt-get install -y \
       git \
       libudev-dev \
       make \
-      python-dev
+      python-dev \
+      libstdc++6
 
 RUN cd /root \
     && git clone https://github.com/OpenZWave/open-zwave.git \
@@ -21,7 +22,7 @@ RUN cd /root \
 RUN cd /root/open-zwave \
     && make install
 
-ENV MY_NODE_OPENZWAVE_VERSION=b74f5c262b6f1997311e282c12d46fd3cf5cf7f9
+ENV MY_NODE_OPENZWAVE_VERSION=ad8fc9be9a14601715888ce5af15001faf9dd830
 
 RUN cd /root \
     && git clone https://github.com/lmeijvogel/my_node_openzwave \
@@ -32,11 +33,11 @@ RUN cd /root \
 RUN echo "/root/open-zwave" >/etc/ld.so.conf.d/open-zwave.conf \
     && ldconfig
 
-RUN cd /root/my_node_openzwave && sed -i -e "s/server = app.listen(port, 'localhost');/server = app.listen(port);/" rest_server.js
-
 ENV TZ=Europe/Amsterdam
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 WORKDIR /root/my_node_openzwave
 
-CMD node main.js --config /etc/config.json
+RUN sed -i -e "s/server = app.listen(port, 'localhost');/server = app.listen(port);/" rest_server.ts
+
+CMD yarn start --config /etc/config.json
