--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -7,10 +7,13 @@ services:
         devices:
           - /dev/ttyUSB0:/dev/ttyUSB0
         command: yarn start --live --config /etc/config.json
+        environment:
+          - TZ=Europe/Amsterdam
         restart: unless-stopped
     webapp:
         environment:
           - RACK_ENV=production
+          - TZ=Europe/Amsterdam
         restart: unless-stopped
     nginx:
         ports:
