--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,5 +31,6 @@ services:
           - REDIS_URL=redis://redis:6379/
         volumes:
           - ../webapp/.env:/root/verlichting-webapp/.env:ro
+        ports: "8880:3000"
         depends_on:
           - driver
